--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,22 @@
-antiorm==1.2.1
+beautifulsoup4==4.6.0
 blinker==1.4
+bs4==0.0.1
+certifi==2018.4.16
+chardet==3.0.4
 click==6.7
-db==0.1.1
 Flask==1.0.2
 Flask-DebugToolbar==0.10.1
 Flask-SQLAlchemy==2.3.2
+gevent==1.3.0
+greenlet==0.4.13
+grequests==0.3.0
+idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
 pkg-resources==0.0.0
 psycopg2==2.7.4
-SQLAlchemy==1.2.8
+requests==2.18.4
+SQLAlchemy==1.2.7
+urllib3==1.22
 Werkzeug==0.14.1
